Removed class years from about page + fixed height on mobile

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -50,5 +50,9 @@ button:focus {
 .polyfill-button {
     -webkit-appearance: none;
 }
+.full-height {
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
+}
 /* purgecss end ignore */
 @tailwind  utilities;
